# CodeAlpha_TO_DO_LIST_APP

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/controller/: todo_controller.hpp
include/model/: category_manager.hpp  todo.hpp  todo_manager.hpp
include/tui/: category_window.hpp  done_window.hpp  input_window.hpp  preview_window.hpp  scroll_window.hpp  todo_window.hpp  tui_manager.hpp  window.hpp
src/: main.cpp
src/controller/: todo_controller.cpp
src/model/: category_manager.cpp  todo.cpp  todo_manager.cpp
src/tui/: category_window.cpp  done_window.cpp  input_window.cpp  preview_window.cpp  scroll_window.cpp  todo_window.cpp  tui_manager.cpp  window.cpp
